--- a/public/css/stylecardapios.css
+++ b/public/css/stylecardapios.css
@@ -4,112 +4,112 @@
     font-family: "Aileron Regular";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-regular.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-regular.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Italic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-italic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-italic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Thin";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-Thin.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-Thin.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron UltraLight";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-UltraLight.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-UltraLight.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron ThinItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-thinitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-thinitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron UltraLightItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-ultralightitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-ultralightitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Light";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-light.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-light.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron LightItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-lightitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-lightitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron SemiBold";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-SemiBold.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-SemiBold.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron SemiBoldItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-SemiBoldItalic.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-SemiBoldItalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Bold";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-bold.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-bold.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron BoldItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-bolditalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-bolditalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Black";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-black.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-black.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Heavy";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-heavy.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-heavy.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron BlackItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-blackitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-blackitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron HeavyItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-heavyitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-heavyitalic.otf') format('woff');
 }
 
 * {
@@ -118,14 +118,6 @@
 
 body{
     margin: 0;
-    padding: 0px;
-}
-
-#home {
-    background-image: url("imagens/fundo.png");
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-size: 100%;
 }
 
 .botao {
@@ -148,17 +140,6 @@ body{
     display: inline-block;
     font: normal normal 20px/57px "Aileron Bold", sans-serif;
     text-align: center;
-}
-
-.botao-logo {
-    background: #98ca3f;
-    border-radius: 5px;
-    width: 255px;
-    height: 55px;
-    color: #ffffff;
-    display: inline-block;
-    font: normal normal 18px/55px "Aileron Bold", sans-serif;
-    text-align:center;
 }
 
 header>nav {
@@ -208,25 +189,6 @@ section>figure {
     float: left;
 }
 
-#diferenciais>figure {
-    width: 300px;
-    height: 350px;
-    border-radius: 5px;
-    box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.14);
-    background-color: #ffffff;
-    padding: 10px;
-}
-
-.retangulo-depoimento {
-    width: 100%;
-    height: 900px; /*1070px tamanho do design*/
-    background-color: #98ca3f;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-}
-
 .retangulo-mais-sabores{
     width: 100%;
     height: 84px;
@@ -255,49 +217,6 @@ section>figure {
     border-bottom: 3px solid #ffffff;
 }
 
-
-.foto-depoimento {
-    width: 456.49px;
-    height: 540.42px;
-    border-radius: 3px;
-    /*float: right;*/
-}
-
-/*Retangulo do design*/
-.barra-depoimento{
-    float: left;
-}
-
-.texto-depoimento {
-    width: 421px;
-    height: 340px;
-    font-family: "Aileron LightItalic";
-    font-size: 28px;
-    font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.71;
-    letter-spacing: normal;
-    text-align: left;
-    color: #182c3f;
-}
-
-/*Botões do slideshow*/
-.slider-seletor-ativo {
-    width: 78.8px;
-    height: 9.2px;
-    border-radius: 5.5px;
-    background-color: #182c3f;
-}
-
-.slider-seletor-inativo {
-    width: 78.8px;
-    height: 9.2px;
-    border-radius: 5.5px;
-    background-color: #ffffff;
-}
-/*fim dos botoes slideshow*/
-
 footer {
     font-family: "Aileron Bold";
     font-size: 14px;
@@ -308,114 +227,21 @@ footer {
     letter-spacing: normal;
     color: #54565A;
     display: flex;
-    align-items: center;
+    align-items: center;    
     height: 100px;
     width: 100%;    
     background-color: #EFF2F3;
+    /*justify-content: center;*/
 }
 
 footer>section>a{
     color: #54565A;
 }
 
-.nosso-compromisso {
-    height: 36px;/*Utilizei o auto*/
-    font-family: "Aileron Bold";
-    font-size: 34px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.35;
-    letter-spacing: normal;
-    text-align: left;
-    color: #ffffff;
-    /*margin-bottom: 90px;*/
-}
-
-.nome-pessoa {
-    width: 147px;
-    height: 28px;
-    font-family: "Aileron Bold";
-    font-size: 21px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.19;
-    letter-spacing: normal;
-    text-align: left;
-    color: #ffffff;
-}
-
-.profissao {
-    height: 20px;
-    font-family: "Aileron Regular";
-    font-size: 16px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.25;
-    letter-spacing: normal;
-    text-align: left;
-    color: #182c3f;
-}
-
-.texto-abaixo-logo {
-    width: 665px;
-    height: 109px;
-    font-family: "Aileron SemiBold";
-    font-size: 18px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.89;
-    letter-spacing: normal;
-    text-align: center;
-    color: #d2d2d2;
-    margin: auto;
-}
-
-.diferenciais-titulo strong {
-    width: 158px;
-    height: 63px;
-    font-family: "Aileron Bold";
-    font-size: 18px;/*Tamanho do design*/
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.42;
-    letter-spacing: normal;
-    text-align: center;
-    color: #98ca3f;
-}
-
-.diferenciais-titulo {
-    color: #2c2e30;
-    font-size: 18px;/*Tamanho do design*/
-}
-
 .saiba-mais:hover:after {
     width: 133.9px;
     height: 0;
     border: solid 3px #98ca3f;
-}
-
-section#logo {    
-    height: 600px; /*utilizei 670px*/
-    line-height: 5;
-    /*margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    width: auto;*/    
-}
-
-section#diferenciais {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    align-content: center;
-    align-self: center;
-    justify-content: center;
 }
 
 #logo-preta{
@@ -428,10 +254,6 @@ section#diferenciais {
 .logomarca-preta{
     width: 329.7px;
     height: 206.9px;
-}
-
-#depoimento-texto {
-    text-align: left;
 }
 
 #fino {
@@ -452,7 +274,7 @@ section#diferenciais {
 
 section#footer-direita {
     float: right;
-    margin: 60px 50px 40px auto;
+    margin: auto;
     /*margin-left: 200px;
     margin-top: 15px;
     height: 37px;*/
@@ -470,7 +292,7 @@ section#footer-direita>a {
 
 section#footer-esquerda {
     float: left;    
-    margin: 60px auto 40px 50px;
+    margin: auto;
     /*margin-right: 200px;
     margin-top: 15px;
     height: 37px;*/
@@ -478,21 +300,24 @@ section#footer-esquerda {
 
 section#footer-esquerda>a {
     padding: 1px 5px;
-    margin-right: 15px;   
+    margin-right: 15px;
+   
 }
 
-.imagem-pizza {
-    width: 80%;
-    border-radius: 2px;
-    /*margin-top: 10%;
-    margin-bottom: 10%;*/
+.imagem-pizza {  
+    width: 100%;  
+    border-radius: 3px;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 #receitas {
     display: grid;
     width: 60%;
-    margin: auto;
+    margin: 0 auto;
     text-align: left;
+    grid-gap: 5px;
+
 }
 
 .titulo-receitas {
@@ -532,9 +357,9 @@ section#footer-esquerda>a {
     padding-bottom: 2px;
 }
 
-#receitas>figure {
-    height: 200px;
-}
+/*#receitas>figure {
+    height: auto;
+}*/
 
 .receita-1-1 {
     grid-row: 1;
@@ -580,29 +405,4 @@ section#footer-esquerda>a {
 
 a:hover {
     border-bottom: 2px solid #98ca3f;
-}
-
-.autor{
-    font-family: "Aileron Regular";
-    font-size: 11px;
-    font-weight: normal;
-    font-style: italic;
-    font-stretch: normal;
-    text-align: center;
-    line-height: 1.21;
-    letter-spacing: normal;
-    color: #54565A;
-    background-color: rgb(215, 216, 216);
-    height: 40px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-#coracao{
-    width: 20px;
-    height: 20px;
-    padding-left: 3px;
 }
