--- a/public/css/stylepedido.css
+++ b/public/css/stylepedido.css
@@ -4,112 +4,112 @@
     font-family: "Aileron Regular";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-regular.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-regular.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Italic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-italic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-italic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Thin";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-Thin.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-Thin.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron UltraLight";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-UltraLight.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-UltraLight.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron ThinItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-thinitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-thinitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron UltraLightItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-ultralightitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-ultralightitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Light";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-light.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-light.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron LightItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-lightitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-lightitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron SemiBold";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-SemiBold.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-SemiBold.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron SemiBoldItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/Aileron-SemiBoldItalic.otf') format('woff');
+    src: local(Aileron), url('../font/Aileron-SemiBoldItalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Bold";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-bold.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-bold.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron BoldItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-bolditalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-bolditalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Black";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-black.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-black.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron Heavy";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-heavy.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-heavy.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron BlackItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-blackitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-blackitalic.otf') format('woff');
 }
 
 @font-face {
     font-family: "Aileron HeavyItalic";
     font-style: normal;
     font-weight: normal;
-    src: local(Aileron), url('fontes/aileron-heavyitalic.otf') format('woff');
+    src: local(Aileron), url('../font/aileron-heavyitalic.otf') format('woff');
 }
 
 * {
